truetype: limit font name to 127 chars

Some broken fonts have long strings of garbage in the font name

https://bugs.freedesktop.org/show_bug.cgi?id=103249